Deploy full site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-🚀 PromptItPro is Live
+<!DOCTYPE html><html><head><title>PromptItPro</title></head><body><h1>🚀 PromptItPro is Live</h1></body></html>
