--- a/index.html
+++ b/index.html
@@ -1,76 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PromptItPro.ai</title>
-  <style>
-    body {
-      background-color: #0e0e0e;
-      color: #ffffff;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      padding: 60px 20px;
-      background: #111111;
-    }
-    h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-    .cta {
-      margin-top: 30px;
-      padding: 15px 30px;
-      background: #00ffd0;
-      color: #000;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-    section {
-      padding: 40px 20px;
-    }
-    footer {
-      padding: 30px 10px;
-      background: #101010;
-      color: #555;
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>🚀 PromptItPro.ai</h1>
-    <p>100% Hands-Off AI Deployments. Ghost Teams. Real Revenue.</p>
-    <button class="cta" onclick="window.location.href='#waitlist'">Join Waitlist</button>
-  </header>
-  <section>
-    <h2>What We Do</h2>
-    <p>AI-powered web + social systems that generate passive income for creators & founders with zero setup.</p>
-  </section>
-  <section>
-    <h2>Ghost Services</h2>
-    <ul>
-      <li>📦 Full Website Deployment</li>
-      <li>👻 Social Media Automation via Ghost Accounts</li>
-      <li>📈 Revenue Strategy & Scaling</li>
-    </ul>
-  </section>
-  <section id="waitlist">
-    <h2>Get Early Access</h2>
-    <p>Email: <strong>hello@promptitpro.ai</strong></p>
-  </section>
-  <footer>
-    &copy; 2025 PromptItPro.ai - All rights reserved.
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>PromptItPro</title></head><body><h1>🚀 PromptItPro is Live</h1></body></html>
