Deploy full static PromptItPro site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!DOCTYPE html><html><head><title>PromptItPro</title></head><body><h1>🚀 PromptItPro is Live</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>PromptItPro - Money-Making Prompts</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+    <header>
+        <h1>🚀 PromptItPro</h1>
+        <p>Make Money with AI — Download Proven Prompt Packs</p>
+        <a href="#waitlist" class="cta">Join the Waitlist</a>
+    </header>
+
+    <main>
+        <section id="features">
+            <h2>What You’ll Get</h2>
+            <ul>
+                <li>💼 Business prompt packs</li>
+                <li>🎨 Content creation kits</li>
+                <li>📈 Money-generating workflows</li>
+            </ul>
+        </section>
+
+        <section id="waitlist">
+            <h2>Join the Waitlist</h2>
+            <form name="waitlist" netlify>
+                <input type="text" name="name" placeholder="Your Name" required />
+                <input type="email" name="email" placeholder="Your Email" required />
+                <button type="submit">Notify Me</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 PromptItPro. All rights reserved.</p>
+    </footer>
+</body>
+</html>
